<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/rent_amount"
                android:textColor="@color/text_dark_blue"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_rent_amount"
                style="@style/EditText"
                android:background="@drawable/grey_border_background"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:padding="@dimen/space8"
                android:textColorHint="@color/grey_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/deposit_amount"
                android:textColor="@color/text_dark_blue"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_deposit_amount"
                style="@style/EditText"
                android:background="@drawable/grey_border_background"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:padding="@dimen/space8"
                android:textColorHint="@color/grey_hint" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/tenant_move_in"
                android:textColor="@color/text_dark_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_move_in_date"
                style="@style/EditText"
                android:background="@drawable/grey_border_background"
                android:drawableEnd="@drawable/ic_calender"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/enter_tenant_move_in"
                android:padding="@dimen/space8"
                android:textColorHint="@color/grey_hint" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/rent_start_date"
                android:textColor="@color/text_dark_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_rent_start_date"
                style="@style/EditText"
                android:background="@drawable/grey_border_background"
                android:drawableEnd="@drawable/ic_calender"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/enter_rent_date"
                android:padding="@dimen/space8"
                android:textColorHint="@color/grey_hint" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/rent_due_date"
        android:textColor="@color/text_dark_blue"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_rent_due_date"
        style="@style/EditText"
        android:background="@drawable/grey_border_background"
        android:drawableEnd="@drawable/ic_calender"
        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="@string/enter_rent_due_date"
        android:padding="@dimen/space8"
        android:textColorHint="@color/grey_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/lease_type"
        android:textColor="@color/text_dark_blue"
        android:textSize="16sp" />

    <RadioGroup
        android:background="@drawable/grey_border_background"
        android:gravity="center"
        android:id="@+id/rg_lease_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/rb_until_leave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:theme="@style/RadioButtonStyle"
            android:text="@string/until_leave"
            android:textColor="@color/text_dark_blue"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/rb_fixed_define"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fixed_define"
            android:theme="@style/RadioButtonStyle"
            android:textColor="@color/text_dark_blue"
            android:paddingVertical="@dimen/_10sdp"
            android:gravity="center" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_lease_date_selection"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/start_date"
                android:textColor="@color/text_dark_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_aggreement_start_date"
                style="@style/EditText"
                android:background="@drawable/grey_border_background"
                android:drawableEnd="@drawable/ic_calender"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/enter_start_date"
                android:padding="@dimen/space8"
                android:textColorHint="@color/grey_hint" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/end_date"
                android:textColor="@color/text_dark_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_aggreement_end_date"
                style="@style/EditText"
                android:background="@drawable/grey_border_background"
                android:drawableEnd="@drawable/ic_calender"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/enter_end_date"
                android:padding="@dimen/space8"
                android:textColorHint="@color/grey_hint" />


        </LinearLayout>


    </LinearLayout>




</LinearLayout>

