<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Grouping Main Content in a Virtual Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/centered_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tip_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <!-- No Data Image -->
            <ImageView
                android:id="@+id/no_data_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/home_no_data_found"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- No Data Title Text -->
            <TextView
                android:id="@+id/tvTitle"
                style="@style/OnboardingTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/add_property"
                app:layout_constraintTop_toBottomOf="@id/no_data_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- No Data Subtitle Text -->
            <TextView
                android:id="@+id/tvSubtitle"
                style="@style/OnboardingSubtitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_your_property_desc"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Button to Add Property -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddProperty"
                android:layout_width="320dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_background"
                android:fontFamily="@font/outfit_semibold"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/add_your_property_btn"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Tip TextView at the Bottom -->
        <TextView
            android:id="@+id/tip_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/no_properties_tip"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
